--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
-# ng build --prod --base-href '/admin/'
+# ng build --prod --base-href '/nexProMa/'
 <IfModule mod_rewrite.c>
     RewriteEngine on
     RewriteCond %{REQUEST_FILENAME} -s [OR]
     RewriteCond %{REQUEST_FILENAME} -l [OR]
     RewriteCond %{REQUEST_FILENAME} -d
     RewriteRule ^.*$ - [NC,L]
-    RewriteRule ^(.*) /admin/index.html [NC,L]
+    RewriteRule ^(.*) /nexProMa/index.html [NC,L]
 </IfModule>
 
